# BCIT

./: README.md
BSACS/AI-COMP8085/COMP8085_Project1/: .gitignore  NIDS.py
BSACS/AI-COMP8085/COMP8085_Project1/models/: CCA.py  GBC.py  (+4 more)
BSACS/AI-COMP8085/COMP8085_Project2/: .gitignore  README.md  main.py
BSACS/Algorithm-COMP8042/COMP8042_Assignment1/: CMakeLists.txt  main.cpp
BSACS/Algorithm-COMP8042/COMP8042_Assignment1/docs/: Assignment1.md
BSACS/Algorithm-COMP8042/COMP8042_Assignment1/include/: BookReservation.h  CircularQueue.h
BSACS/Algorithm-COMP8042/COMP8042_Assignment1/src/: BookReservation.cpp  CircularQueue.cpp
BSACS/Algorithm-COMP8042/COMP8042_Assignment1/tests/: BookReservationTests.h  CircularQueueTests.h  StackTests.h
BSACS/Algorithm-COMP8042/COMP8042_Assignment2/: CMakeLists.txt
BSACS/Algorithm-COMP8042/COMP8042_Assignment3/: CMakeLists.txt  main.cpp
BSACS/Algorithm-COMP8042/COMP8042_Assignment3/docs/: Assignment3.md
BSACS/Algorithm-COMP8042/COMP8042_Assignment3/include/: LibraryRestructuring.h  MergeSort.h  RadixSort.h  UnorderedSet.h  Utils.h
BSACS/Algorithm-COMP8042/COMP8042_Assignment3/src/: HashTable.cpp  LibraryRestructuring.cpp  MergeSort.cpp  RadixSort.cpp
BSACS/Algorithm-COMP8042/COMP8042_Assignment3/tests/: LibraryRestructuringTests.h  MergeSortTests.h  RadixSortTests.h
BSACS/Cryptology-COMP7402/COMP7402_Assignment1/: CMakeLists.txt  README.md
BSACS/Cryptology-COMP7402/COMP7402_Assignment1/aes/: CMakeLists.txt
BSACS/Cryptology-COMP7402/COMP7402_Assignment1/aes/include/: aes.h
BSACS/Cryptology-COMP7402/COMP7402_Assignment1/aes/src/: aes.cpp  main.cpp
BSACS/Cryptology-COMP7402/COMP7402_Assignment1/avalanche/: CMakeLists.txt
BSACS/Cryptology-COMP7402/COMP7402_Assignment1/avalanche/include/: avalanche.h
BSACS/Cryptology-COMP7402/COMP7402_Assignment1/avalanche/src/: avalanche.cpp  main.cpp
BSACS/Cryptology-COMP7402/COMP7402_Assignment1/des/: CMakeLists.txt
BSACS/Cryptology-COMP7402/COMP7402_Assignment1/des/include/: des.h
BSACS/Cryptology-COMP7402/COMP7402_Assignment1/des/src/: des.cpp  main.cpp
BSACS/Cryptology-COMP7402/COMP7402_Assignment2/: CMakeLists.txt  README.md
BSACS/Cryptology-COMP7402/COMP7402_Assignment2/task1/: CMakeLists.txt
BSACS/Cryptology-COMP7402/COMP7402_Assignment2/task1/include/: Task1.h
BSACS/Cryptology-COMP7402/COMP7402_Assignment2/task1/src/: Task1.cpp  main.cpp
BSACS/Cryptology-COMP7402/COMP7402_Assignment2/task2/: CMakeLists.txt
BSACS/Cryptology-COMP7402/COMP7402_Assignment2/task2/include/: Task2.h
BSACS/Cryptology-COMP7402/COMP7402_Assignment2/task2/src/: Task2.cpp  main.cpp
BSACS/Cryptology-COMP7402/COMP7402_Assignment4/: CMakeLists.txt  README.md
BSACS/Cryptology-COMP7402/COMP7402_Assignment4/include/: Brainpool.h  aes256_cbc.h
BSACS/Cryptology-COMP7402/COMP7402_Assignment4/src/: Brainpool.cpp  aes256_cbc.cpp  main.cpp
BSACS/Cryptology-COMP7402/COMP7402_Assignment5/: CMakeLists.txt  README.md
BSACS/Cryptology-COMP7402/COMP7402_Assignment5/include/: Feistel.h  Key.h  User.h  common.h
BSACS/Cryptology-COMP7402/COMP7402_Assignment5/src/: Feistel.cpp  Key.cpp  User.cpp  common.cpp  main.cpp
BSACS/Cryptology-COMP7402/COMP7402_Project/: .gitignore  CMakeLists.txt
BSACS/Cryptology-COMP7402/COMP7402_Project/data/: a.txt
BSACS/Cryptology-COMP7402/COMP7402_Project/include/: Client.h  Feistel.h  ServerHelper.h  User.h  brainpool.h  common.h  key.h
BSACS/Cryptology-COMP7402/COMP7402_Project/src/: Client.cpp  Feistel.cpp  Server.cpp  ServerHelper.cpp  brainpool.cpp  common.cpp  key.cpp
BSACS/Network1-COMP7005/COMP7005_assignment1/: CMakeLists.txt
BSACS/Network1-COMP7005/COMP7005_assignment3/: .gitignore  CMakeLists.txt
BSACS/Network1-COMP7005/COMP7005_project/: CMakeLists.txt  README.md
BSACS/Network1-COMP7005/COMP7005_project/include/: common.h  proxy.h  receiver.h  sender.h
BSACS/Network1-COMP7005/COMP7005_project/python_src/: main.py  sherlok.txt
BSACS/Network1-COMP7005/COMP7005_project/src/: CMakeLists.txt  common.c  conversion.c  proxy.c  receiver.c  sender.c
BSACS/Network2-COMP8005/COMP8005_assignment1/: CMakeLists.txt
BSACS/Network2-COMP8005/COMP8005_assignment1/src/: CMakeLists.txt  common.c  linkedList.c  main.c
BSACS/Network2-COMP8005/COMP8005_assignment2/: CMakeLists.txt
BSACS/Network2-COMP8005/COMP8005_assignment3/: README.md  christmas_attack.py  hping3.py  initialize.py  land_attack.py  ping_of_death.py  port_scanner.py  syn_flood_attack.py
BSACS/Network2-COMP8005/COMP8005_assignment4/: CMakeLists.txt  README.md
BSACS/Network2-COMP8005/COMP8005_assignment4/src/: CMakeLists.txt  linked_list.c  proc_main.c
BSACS/Network2-COMP8005/COMP8005_project/: CMakeLists.txt  README.md
BSACS/Network2-COMP8005/COMP8005_project/include/: client.h  client_helper.h  common.h  conversion.h  error.h  linkedList.h  server.h  server_helper.h
BSACS/Network2-COMP8005/COMP8005_project/src/: CMakeLists.txt  client.c  client_helper.c  common.c  conversion.c  error.c  linkedList.c  server.c  server_helper.c
BSACS/Network3-COMP8505/COMP8505_assignment1/: CMakeLists.txt  README.md
BSACS/Network3-COMP8505/COMP8505_assignment2/: CMakeLists.txt  README.md
BSACS/Network3-COMP8505/COMP8505_assignment3/: CMakeLists.txt  README.md
BSACS/Network3-COMP8505/COMP8505_assignment4/: CMakeLists.txt  README.md
BSACS/Network3-COMP8505/COMP8505_project/: CMakeLists.txt  README.md  knock.sh
BSACS/Network3-COMP8505/COMP8505_project/include/: attacker.h  common.h  extern.h  filetracker.h  keylogger.h  options.h  victim.h
BSACS/Network3-COMP8505/COMP8505_project/src/: CMakeLists.txt  attacker.c  common.c  filetracker.c  keylogger.c  victim.c
CST/DC_Shell-Assignment/: .gitignore  README.md
CST/DC_Shell-Assignment/include/: execute.h
CST/DC_Shell-Assignment/src/: builtins.c  command.c  execute.c  input.c  main.c  shell.c  shell_impl.c  util.c
CST/DC_Shell-Assignment/tests/: main.c
CST/Finite-State-Machine-Template/: .gitignore  CMakeLists.txt  README.md
CST/Finite-State-Machine-Template/include/: fsm.h
CST/Finite-State-Machine-Template/src/: fsm.c  main.c
(+102 files in other folders)
